--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,12 @@
           <option value="admin">Admin</option>
         </select>
         <button type="submit">Login</button>
+        <div style="text-align: right; margin-top: 8px;">
+  <a href="forgotpassword.html" style="color: #3cb6ff; font-size: 14px; text-decoration: none;">
+    Forgot Password?
+  </a>
+</div>
+
       </form>
     </div>
   </div>
