--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -1,73 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Forgot Password</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
-    body {
+    :root {
+      --main-color: #8c0002;
+      --glow-color: #3cb6ff;
+      --bg-overlay: rgba(0, 0, 0, 0.6);
+      --text-light: #fefefe;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #4e54c8, #8f94fb);
+    }
+
+    body {
+      background: url('https://i.ytimg.com/vi/zKGq-sYdaw8/maxresdefault.jpg') no-repeat center center/cover;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      padding: 20px;
     }
-    .box {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+
+    .container {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow: 0 0 25px rgba(0, 191, 255, 0.2);
+      backdrop-filter: blur(15px);
+      border-radius: 20px;
+      padding: 40px 35px;
       width: 100%;
       max-width: 400px;
+      animation: fadeSlide 1.2s ease;
+      position: relative;
     }
+
+    .container:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 40px var(--glow-color);
+    }
+
+    @keyframes fadeSlide {
+      0% { transform: translateY(40px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
+
     h2 {
-      margin-bottom: 20px;
+      color: var(--text-light);
+      text-shadow: 0 0 8px var(--main-color);
       text-align: center;
-      color: #333;
+      margin-bottom: 20px;
     }
-    input[type="text"],
-    input[type="email"],
-    input[type="password"],
-    input[type="number"] {
+
+    input, button {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
       margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
+      border-radius: 12px;
+      font-size: 15px;
     }
+
+    input {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      color: white;
+    }
+
+    input::placeholder {
+      color: #ccc;
+    }
+
+    input:focus {
+      outline: none;
+      border-color: var(--glow-color);
+      box-shadow: 0 0 10px var(--glow-color);
+    }
+
     button {
-      width: 100%;
-      padding: 12px;
-      background-color: #4e54c8;
+      background: linear-gradient(135deg, #3cb6ff, #ff3d3d);
+      border: none;
       color: white;
       font-weight: bold;
-      border: none;
-      border-radius: 8px;
       cursor: pointer;
+      border-radius: 50px;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    button:hover {
+      background: linear-gradient(135deg, #3cb6ff, #ff6a6a);
+      box-shadow: 0 0 25px #3cb6ff, 0 0 40px rgba(255, 77, 77, 0.4);
+    }
+
+    .info, .error {
+      text-align: center;
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    .info { color: #00ff9f; }
+    .error { color: red; }
+
+    .popup {
+      background: #003318;
+      color: #00ff99;
+      border: 1px solid #00ff99;
+      padding: 12px;
+      text-align: center;
       margin-top: 10px;
+      border-radius: 10px;
+      display: none;
     }
-    button:disabled {
-      background-color: #aaa;
-      cursor: not-allowed;
-    }
-    .info {
-      text-align: center;
+
+    .back-btn {
+      position: absolute;
+      top: -45px;
+      left: 0;
       font-size: 14px;
-      color: green;
+      color: #3cb6ff;
+      text-decoration: none;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 6px 12px;
+      border-radius: 20px;
+      transition: 0.3s;
     }
-    .error {
-      color: red;
-      font-size: 14px;
-      text-align: center;
+
+    .back-btn:hover {
+      background: #3cb6ff;
+      color: black;
     }
   </style>
 </head>
 <body>
-  <div class="box">
+  <div class="container">
+    <a href="index.html" class="back-btn">← Back to Login</a>
     <h2>Forgot Password</h2>
     <input type="text" id="userId" placeholder="Enter User ID">
     <input type="email" id="email" placeholder="Enter Registered Email">
@@ -81,6 +154,7 @@
 
     <p class="info" id="info"></p>
     <p class="error" id="error"></p>
+    <div id="popup" class="popup">Password changed successfully!</div>
   </div>
 
   <script>
@@ -139,7 +213,10 @@
       .then(res => res.json())
       .then(data => {
         if (data.success) {
-          document.getElementById('info').textContent = 'Password reset successfully.';
+          document.getElementById('popup').style.display = 'block';
+          setTimeout(() => {
+            window.location.href = "index.html";
+          }, 2000);
         } else {
           document.getElementById('error').textContent = 'Failed to reset password.';
         }
