--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -9,7 +9,7 @@
     :root {
       --main-color: #8c0002;
       --glow-color: #3cb6ff;
-      --bg-overlay: rgba(0, 0, 0, 0.6);
+      --bg-overlay: rgba(0, 0, 0, 0.65);
       --text-light: #fefefe;
     }
 
@@ -26,19 +26,32 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: var(--bg-overlay);
+      z-index: 0;
     }
 
     .container {
+      position: relative;
+      z-index: 1;
       background: rgba(255, 255, 255, 0.05);
       border: 1px solid rgba(255, 255, 255, 0.15);
       box-shadow: 0 0 25px rgba(0, 191, 255, 0.2);
       backdrop-filter: blur(15px);
       border-radius: 20px;
-      padding: 40px 35px;
+      padding: 40px 35px 30px;
       width: 100%;
       max-width: 400px;
       animation: fadeSlide 1.2s ease;
-      position: relative;
+      transition: transform 0.4s ease;
     }
 
     .container:hover {
@@ -120,15 +133,14 @@
     }
 
     .back-btn {
-      position: absolute;
-      top: -45px;
-      left: 0;
+      display: inline-block;
       font-size: 14px;
       color: #3cb6ff;
       text-decoration: none;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.4);
       padding: 6px 12px;
       border-radius: 20px;
+      margin-bottom: 10px;
       transition: 0.3s;
     }
 
@@ -139,6 +151,8 @@
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
+
   <div class="container">
     <a href="index.html" class="back-btn">← Back to Login</a>
     <h2>Forgot Password</h2>
