--- a/public/knowaboutstd1.html
+++ b/public/knowaboutstd1.html
@@ -183,6 +183,61 @@
       text-decoration: none;
       color: inherit;
     }
+
+    /* Responsive design for mobile & tablet */
+@media (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .sidebar {
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+  }
+
+  .sidebar h2 {
+    margin: 10px 0;
+  }
+
+  .menu {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .menu li {
+    margin: 0;
+  }
+
+  .menu li a {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+
+  .logout {
+    margin: 10px auto;
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+
+  .content {
+    padding: 20px;
+  }
+
+  .student-info,
+  .student-details {
+    width: 100%;
+    max-width: 95%;
+  }
+}
+
   </style>
 </head>
 <body>
