--- a/public/knowaboutstd1.html
+++ b/public/knowaboutstd1.html
@@ -193,50 +193,74 @@
 
   .sidebar {
     width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    padding: 10px 20px;
+    padding: 15px;
+    gap: 10px;
+    box-shadow: none;
   }
 
   .sidebar h2 {
-    margin: 10px 0;
+    margin: 0;
+    font-size: 16px;
+    text-align: center;
   }
 
   .menu {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
     justify-content: center;
+    gap: 10px;
     width: 100%;
+    padding: 10px 0;
   }
 
   .menu li {
     margin: 0;
+    flex: 1 1 auto;
   }
 
   .menu li a {
-    padding: 8px 12px;
     font-size: 14px;
+    padding: 8px 12px;
+    border-radius: 6px;
+    text-align: center;
   }
 
   .logout {
-    margin: 10px auto;
+    margin: 10px 0;
     padding: 8px 16px;
     font-size: 14px;
+    width: 60%;
   }
 
   .content {
     padding: 20px;
+    align-items: center;
   }
 
   .student-info,
   .student-details {
+    width: 95%;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .student-info h3 {
+    font-size: 14px;
+  }
+
+  .student-info input {
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .know-btn {
     width: 100%;
-    max-width: 95%;
+    font-size: 14px;
   }
 }
+
 
   </style>
 </head>
