--- a/public/imposefines.html
+++ b/public/imposefines.html
@@ -191,6 +191,14 @@
         <input type="text" id="studentId" placeholder="Student User ID" required />
         <textarea id="reason" rows="3" placeholder="Reason"></textarea>
         <input type="number" id="amount" placeholder="Amount (₹)" required />
+        <select id="academicYear" required>
+  <option value="">Select Academic Year</option>
+  <option value="1">1st Year</option>
+  <option value="2">2nd Year</option>
+  <option value="3">3rd Year</option>
+  <option value="4">4th Year</option>
+</select>
+
         <button onclick="imposeFine()">Impose Fine</button>
       </div>
     </div>
