--- a/public/feedetails.html
+++ b/public/feedetails.html
@@ -100,90 +100,79 @@
     .content {
       flex-grow: 1;
       background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 30px;
+      padding: 40px;
     }
 
- .fee-details {
-  background: linear-gradient(to right, #fefefe, #f4f9fd);
-  color: #2c3e50;
-  padding: 40px 50px;
-  border-radius: 20px;
-  width: 95%;
-  max-width: 1100px;
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
-  border: 1px solid #e3eaf5;
-  transition: all 0.3s ease;
-  overflow-x: auto;
-}
+    .fee-wrapper {
+      max-height: 600px;
+      overflow-y: auto;
+      padding: 30px;
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      border: 1px solid #ddd;
+    }
 
-.fee-details:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 18px 40px rgba(0, 0, 0, 0.2);
-}
+    .main-heading {
+      text-align: center;
+      font-size: 22px;
+      margin-bottom: 30px;
+      background: #e3f2ff;
+      padding: 15px;
+      border-radius: 10px;
+      color: #0b5394;
+      font-weight: bold;
+    }
 
-.fee-details {
-  background: #ffffff;
-  color: #333;
-  padding: 35px 40px;
-  border-radius: 20px;
-  width: 90%;
-  max-width: 1000px;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-  border: 1px solid #e0e0e0;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  overflow-x: auto;
-}
+    .fee-card {
+      margin-bottom: 30px;
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      padding: 25px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      background: #f9fcff;
+    }
 
-.fee-details:hover {
-  transform: scale(1.01);
-  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.25);
-}
+    .fee-card h3 {
+      text-align: center;
+      background: #d8ecff;
+      color: #1f4e8c;
+      padding: 10px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
 
-.fee-details h2 {
-  text-align: center;
-  margin-bottom: 25px;
-  font-size: 24px;
-  color: #1f75cb;
-  background: rgba(31, 117, 203, 0.1);
-  padding: 12px;
-  border-radius: 10px;
-}
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 17px;
+    }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 17px;
-}
+    thead tr {
+      background-color: #f5f7fa;
+      color: #333;
+    }
 
-thead tr {
-  background-color: #f5f7fa;
-  color: #333;
-}
+    th, td {
+      padding: 12px 15px;
+      text-align: right;
+      border-bottom: 1px solid #ddd;
+    }
 
-th, td {
-  padding: 12px 15px;
-  text-align: right;
-  border-bottom: 1px solid #ddd;
-}
+    th:first-child, td:first-child {
+      text-align: left;
+    }
 
-th:first-child, td:first-child {
-  text-align: left;
-}
+    tbody tr:hover {
+      background-color: #f0f8ff;
+    }
 
-tbody tr:hover {
-  background-color: #f0f8ff;
-}
-
-tfoot tr {
-  background-color: #e6f0ff;
-  font-weight: bold;
-  color: #0b3e75;
-  border-top: 2px solid #d0e3ff;
-}
-
+    tfoot tr {
+      background-color: #e6f0ff;
+      font-weight: bold;
+      color: #0b3e75;
+      border-top: 2px solid #d0e3ff;
+    }
 
     @media (max-width: 768px) {
       .container {
@@ -199,10 +188,9 @@ tfoot tr {
         padding: 15px;
       }
 
-      .fee-details {
-        width: 100%;
+      .fee-wrapper {
+        max-height: 400px;
         padding: 20px;
-        overflow-x: auto;
       }
     }
   </style>
@@ -227,109 +215,86 @@ tfoot tr {
 
     <!-- Content -->
     <div class="content">
-      <div class="fee-details">
-        <!-- Filled by JS -->
+      <div class="fee-wrapper">
+        <h2 class="main-heading">📘 Year-wise Fee Details</h2>
+        <div id="feeCardsContainer"></div>
       </div>
     </div>
   </div>
 
- <script>
+<script>
   const userId = localStorage.getItem("userId");
   document.getElementById("userId").textContent = userId || "Unknown";
 
-  const baseUrl = window.location.hostname.includes("localhost")
-    ? "http://localhost:3000"
-    : "https://crr-noc.onrender.com"; // Replace with your actual Render URL if different
+  fetch(`http://localhost:3000/yearwise-fee/${userId}`)
+    .then(res => res.json())
+    .then(res => {
+      if (!res.success) throw new Error("Fee data not found.");
 
-  let feeData = {};
-  let fineAmount = 0;
-  let paidMap = {};
+      const data = res.data;
+      const container = document.getElementById("feeCardsContainer");
+      container.innerHTML = "";
 
-  fetch(`${baseUrl}/student/${userId}`)
-    .then((res) => res.json())
-    .then((data) => fetch(`${baseUrl}/fee-structure/${data.reg_no}`))
-    .then((res) => res.json())
-    .then((feeRes) => {
-      if (!feeRes.success) throw new Error("No fee structure found.");
-      feeData = feeRes.data;
-      return fetch(`${baseUrl}/paid-amounts/${userId}`);
-    })
-    .then((res) => res.json())
-    .then((paidRes) => {
-      paidRes.forEach((row) => {
-        paidMap[row.fee_type] = parseFloat(row.paid);
-      });
-      return fetch(`${baseUrl}/total-fine/${userId}`);
-    })
-    .then((res) => res.json())
-    .then((fineRes) => {
-      fineAmount = fineRes.totalFine || 0;
+      data.forEach(({ year, structure, paid, fines }) => {
+        const items = [
+          { label: "Tuition Fee", key: "tuition" },
+          { label: "Hostel Fee", key: "hostel" },
+          { label: "Bus Fee", key: "bus" },
+          { label: "University Fee", key: "university" },
+          { label: "Semester Fee", key: "semester" },
+          { label: "Library Dues", key: "library" },
+          { label: "Fines", key: "fines" }
+        ];
 
-      const items = [
-        { label: "Tuition Fee", key: "tuition" },
-        { label: "Hostel Fee", key: "hostel" },
-        { label: "Bus Fee", key: "bus" },
-        { label: "University Fee", key: "university" },
-        { label: "Semester Fee", key: "semester" },
-        { label: "Library Dues", key: "library" },
-        { label: "Fines", key: "fines" },
-      ];
+        let paidTotal = 0, remainingTotal = 0, actualTotal = 0;
+        let rowsHTML = "";
 
-      const container = document.querySelector(".fee-details");
-      container.innerHTML = `
-        <h2><span style="font-size: 1.3em;">💳</span> Fee Breakdown</h2>
-        <table>
-          <thead>
+        items.forEach(({ label, key }) => {
+          const total = key === "fines" ? fines : parseFloat(structure[key]) || 0;
+          const paidAmt = parseFloat(paid[key]) || 0;
+          const remain = Math.max(0, total - paidAmt);
+
+          paidTotal += paidAmt;
+          remainingTotal += remain;
+          actualTotal += total;
+
+          rowsHTML += `
             <tr>
-              <th>Fee Type</th>
-              <th>Paid (₹)</th>
-              <th>Remaining (₹)</th>
-              <th>Total (₹)</th>
-            </tr>
-          </thead>
-          <tbody id="feeRows"></tbody>
-          <tfoot>
-            <tr>
-              <td>Total</td>
-              <td id="paidTotal">₹0.00</td>
-              <td id="remainingTotal">₹0.00</td>
-              <td id="actualTotal">₹0.00</td>
-            </tr>
-          </tfoot>
-        </table>
-      `;
+              <td>${label}</td>
+              <td>₹${paidAmt.toFixed(2)}</td>
+              <td>₹${remain.toFixed(2)}</td>
+              <td>₹${total.toFixed(2)}</td>
+            </tr>`;
+        });
 
-      const tbody = document.getElementById("feeRows");
-      let totalRemaining = 0, totalActual = 0, totalPaid = 0;
-
-      items.forEach((item) => {
-        const actualRaw = item.key === "fines" ? fineAmount : feeData[item.key];
-        const actual = !isNaN(parseFloat(actualRaw)) ? parseFloat(actualRaw) : 0;
-        const paidRaw = paidMap[item.key];
-        const paid = !isNaN(parseFloat(paidRaw)) ? parseFloat(paidRaw) : 0;
-        const remaining = Math.max(0, actual - paid);
-
-        totalActual += actual;
-        totalPaid += paid;
-        totalRemaining += remaining;
-
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${item.label}</td>
-          <td style="text-align: right;">₹${paid.toFixed(2)}</td>
-          <td style="text-align: right;">₹${remaining.toFixed(2)}</td>
-          <td style="text-align: right;">₹${actual.toFixed(2)}</td>
-        `;
-        tbody.appendChild(row);
+        container.innerHTML += `
+          <div class="fee-card">
+            <h3>📅 Academic Year ${year}</h3>
+            <table>
+              <thead>
+                <tr>
+                  <th>Fee Type</th>
+                  <th>Paid (₹)</th>
+                  <th>Remaining (₹)</th>
+                  <th>Total (₹)</th>
+                </tr>
+              </thead>
+              <tbody>${rowsHTML}</tbody>
+              <tfoot>
+                <tr>
+                  <td><strong>Total</strong></td>
+                  <td><strong>₹${paidTotal.toFixed(2)}</strong></td>
+                  <td><strong>₹${remainingTotal.toFixed(2)}</strong></td>
+                  <td><strong>₹${actualTotal.toFixed(2)}</strong></td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>`;
       });
-
-      document.getElementById("paidTotal").textContent = `₹${totalPaid.toFixed(2)}`;
-      document.getElementById("remainingTotal").textContent = `₹${totalRemaining.toFixed(2)}`;
-      document.getElementById("actualTotal").textContent = `₹${totalActual.toFixed(2)}`;
     })
-    .catch((err) => {
-      console.error("❌ Error:", err);
-      alert("Failed to load dynamic fee details.");
+    .catch(err => {
+      console.error("❌ Error loading fee data:", err);
+      alert("Failed to load year-wise fee details.");
     });
 
   function logout() {
@@ -340,6 +305,5 @@ tfoot tr {
     window.location.replace("index.html");
   }
 </script>
-
 </body>
 </html>
