--- a/public/generatenoc.html
+++ b/public/generatenoc.html
@@ -12,21 +12,17 @@
       box-sizing: border-box;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-
     body {
       background-color: #1d1d1d;
     }
-
     a {
       text-decoration: none;
       color: inherit;
     }
-
     .container {
       display: flex;
       height: 100vh;
     }
-
     .sidebar {
       width: 270px;
       background-color: rgb(247, 201, 155);
@@ -35,23 +31,19 @@
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     }
-
     .sidebar h2 {
       margin: 40px 20px 20px 20px;
       color: black;
       font-size: 18px;
       font-weight: bold;
     }
-
     .menu {
       list-style-type: none;
       padding: 0;
     }
-
     .menu li {
       margin-bottom: 15px;
     }
-
     .menu li a {
       display: flex;
       align-items: center;
@@ -62,7 +54,6 @@
       border-radius: 8px;
       transition: all 0.3s ease;
     }
-
     .menu li a:hover,
     .menu li.active a {
       background-color: #d4d4d4;
@@ -70,16 +61,13 @@
       transform: translateX(5px);
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
     }
-
     .menu li a span {
       font-size: 18px;
       transition: transform 0.3s ease;
     }
-
     .menu li a:hover span {
       transform: scale(1.2);
     }
-
     .logout {
       background-color: #f09000;
       color: white;
@@ -92,11 +80,9 @@
       margin: 20px auto 0;
       transition: background 0.3s ease;
     }
-
     .logout:hover {
       background-color: #d07900;
     }
-
     .main {
       flex-grow: 1;
       background-color: white;
@@ -105,88 +91,79 @@
       justify-content: center;
       align-items: center;
     }
-
-.form {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(20, 110, 180, 0.85));
-  padding: 40px;
-  border-radius: 20px;
-  width: 100%;
-  max-width: 500px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.form:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-
-.noc-box {
-  background-color: rgba(255, 255, 255, 0.95);
-  padding: 25px 30px;
-  border-radius: 15px;
-  text-align: center;
-  width: 100%;
-  color: #1d1d1d;
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-}
-
-.noc-box:hover {
-  box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15);
-}
-
-
+    .form {
+      background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(20, 110, 180, 0.85));
+      padding: 40px;
+      border-radius: 20px;
+      width: 100%;
+      max-width: 500px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .form:hover {
+      transform: scale(1.01);
+      box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
+    }
+    .noc-box {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 25px 30px;
+      border-radius: 15px;
+      text-align: center;
+      width: 100%;
+      color: #1d1d1d;
+      box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.3s ease;
+    }
+    .noc-box:hover {
+      box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.15);
+    }
     .noc-box h2 {
       margin-bottom: 20px;
       font-size: 18px;
     }
-
     .buttons {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 15px;
       margin-top: 20px;
     }
-
-    .buttons button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
+    .buttons select {
+      padding: 10px;
       font-size: 16px;
-      cursor: pointer;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 100%;
+      max-width: 250px;
     }
-
-.buttons .download {
-  background-color: #1D73D2;
-  color: white;
-  border-radius: 8px;
-  margin-left: 120px;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.buttons .download:hover {
-  background-color: #105a99;
-  transform: scale(1.05);
-}
-
-
+    .buttons button.download {
+      background-color: #1D73D2;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+    .buttons button.download:hover {
+      background-color: #105a99;
+      transform: scale(1.05);
+    }
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
       }
-
       .sidebar {
         width: 100%;
       }
-
       .main {
         padding: 20px;
       }
@@ -217,6 +194,13 @@
         <div class="noc-box">
           <h2>Generate No Objection Certificate / No Due Certificate</h2>
           <div class="buttons">
+            <select id="nocYear">
+              <option value="">Select Academic Year</option>
+              <option value="1">1st Year</option>
+              <option value="2">2nd Year</option>
+              <option value="3">3rd Year</option>
+              <option value="4">4th Year</option>
+            </select>
             <button class="download">Download</button>
           </div>
         </div>
@@ -224,23 +208,29 @@
     </div>
   </div>
 
-<script>
-  const userId = localStorage.getItem("userId");
-  document.getElementById("userId").textContent = userId;
-
-  document.querySelector(".download").addEventListener("click", () => {
+  <script>
     const userId = localStorage.getItem("userId");
-    window.open(`https://crr-noc.onrender.com/generate-noc/${userId}`, '_blank');
-  });
+    document.getElementById("userId").textContent = userId;
 
-  function logout() {
-    localStorage.removeItem("userId");
-    if ("caches" in window) {
-      caches.keys().then((names) => names.forEach((name) => caches.delete(name)));
+    document.querySelector(".download").addEventListener("click", () => {
+      const year = document.getElementById("nocYear").value;
+      if (!year) {
+        alert("Please select an academic year to generate NOC.");
+        return;
+      }
+
+      const userId = localStorage.getItem("userId");
+      const url = `http://crr-noc.onrender.com/generate-noc/${userId}?year=${year}`;
+      window.open(url, '_blank');
+    });
+
+    function logout() {
+      localStorage.removeItem("userId");
+      if ("caches" in window) {
+        caches.keys().then((names) => names.forEach((name) => caches.delete(name)));
+      }
+      window.location.replace("index.html");
     }
-    window.location.replace("index.html");
-  }
-</script>
-
+  </script>
 </body>
 </html>
