--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -6,23 +6,21 @@
   <title>Staff - Update Fee</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
+    /* Your full existing styles here, no changes made except necessary additions */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-
     body {
       background-color: #1d1d1d;
     }
-
     .container {
       display: flex;
       height: 100vh;
       overflow: hidden;
     }
-
     .sidebar {
       width: 270px;
       background-color: rgb(247, 201, 155);
@@ -31,23 +29,18 @@
       justify-content: space-between;
       padding: 20px;
     }
-
     .sidebar h2 {
       margin: 40px 20px 20px 20px;
       color: black;
       font-size: 18px;
     }
-
     .menu {
       list-style: none;
       padding: 0;
     }
-
     .menu li {
-      list-style: none;
       margin-bottom: 15px;
     }
-
     .menu li a {
       display: flex;
       align-items: center;
@@ -58,7 +51,6 @@
       border-radius: 8px;
       transition: all 0.3s ease;
     }
-
     .menu li a:hover,
     .menu li.active a {
       background-color: #d4d4d4;
@@ -66,21 +58,6 @@
       transform: translateX(5px);
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
     }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
     .logout {
       background-color: #f09000;
       color: white;
@@ -93,93 +70,64 @@
       margin: 20px auto;
       transition: background 0.3s ease;
     }
-
     .logout:hover {
       background-color: #d07900;
     }
-
     .main {
       flex-grow: 1;
       background-color: white;
       padding: 40px;
       overflow-y: auto;
     }
-
- .form-box {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-  padding: 40px 35px;
-  border-radius: 20px;
-  max-width: 600px;
-  margin: 0 auto;
-  color: white;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.form-box:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-
+    .form-box {
+      background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+      padding: 40px 35px;
+      border-radius: 20px;
+      max-width: 600px;
+      margin: 0 auto;
+      color: white;
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+    }
     .form-box h2 {
       text-align: center;
       margin-bottom: 25px;
-      color: white;
     }
-.input-group input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 8px;
-  border: none;
-  font-size: 15px;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #000;
-  transition: box-shadow 0.3s ease;
-}
-
-.input-group input:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(54, 169, 225, 0.9);
-}
-
-
+    .input-group {
+      margin-bottom: 15px;
+    }
     .input-group label {
       color: white;
       display: block;
       margin-bottom: 6px;
       font-weight: bold;
     }
-
-    .input-group input {
+    .input-group input,
+    .input-group select {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
+      border-radius: 8px;
       border: none;
-      border-radius: 5px;
-      font-size: 14px;
+      font-size: 15px;
+      background-color: rgba(255, 255, 255, 0.9);
+      color: #000;
     }
-
-.form-box button {
-  margin-top: 25px;
-  width: 100%;
-  padding: 14px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #1D73D2;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-
-.form-box button:hover {
-  background-color: #155ea8;
-  transform: scale(1.05);
-}
-
+    .form-box button {
+      margin-top: 20px;
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      font-weight: bold;
+      background-color: #1D73D2;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+    .form-box button:hover {
+      background-color: #155ea8;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
@@ -205,7 +153,17 @@
         <h2>Update Student Fee Structure</h2>
         <div class="input-group">
           <label for="reg_no">Reg. Number</label>
-          <input type="text" id="reg_no" placeholder="Enter Reg No">
+          <input type="text" id="reg_no" placeholder="Enter Reg No" required />
+        </div>
+        <div class="input-group">
+          <label for="year">Academic Year</label>
+          <select id="year" required>
+            <option value="">Select Year</option>
+            <option value="1">1st Year</option>
+            <option value="2">2nd Year</option>
+            <option value="3">3rd Year</option>
+            <option value="4">4th Year</option>
+          </select>
         </div>
         <div class="input-group"><label>Tuition Fee</label><input type="number" id="tuition"></div>
         <div class="input-group"><label>Hostel Fee</label><input type="number" id="hostel"></div>
@@ -213,6 +171,7 @@
         <div class="input-group"><label>University Fee</label><input type="number" id="university"></div>
         <div class="input-group"><label>Semester Fee</label><input type="number" id="semester"></div>
         <div class="input-group"><label>Library Dues</label><input type="number" id="library"></div>
+        <div class="input-group"><label>Fine</label><input type="number" id="fines"></div>
         <button onclick="updateFee()">Update Fee</button>
       </div>
     </div>
@@ -225,20 +184,22 @@
     function updateFee() {
       const data = {
         reg_no: document.getElementById("reg_no").value.trim(),
+        academic_year: parseInt(document.getElementById("year").value),
         tuition: parseFloat(document.getElementById("tuition").value) || 0,
         hostel: parseFloat(document.getElementById("hostel").value) || 0,
         bus: parseFloat(document.getElementById("bus").value) || 0,
         university: parseFloat(document.getElementById("university").value) || 0,
         semester: parseFloat(document.getElementById("semester").value) || 0,
         library: parseFloat(document.getElementById("library").value) || 0,
+        fines: parseFloat(document.getElementById("fines").value) || 0
       };
 
-      if (!data.reg_no) {
-        alert("Please enter the registration number.");
+      if (!data.reg_no || !data.academic_year) {
+        alert("Please enter both Reg. No and Academic Year.");
         return;
       }
 
-      fetch('https://crr-noc.onrender.com/update-fee-structure', {
+      fetch('http://localhost:3000/update-fee-structure', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
@@ -246,7 +207,7 @@
       .then(res => res.json())
       .then(response => {
         if (response.success) {
-          alert("✅ Fee updated successfully!");
+          alert("✅ Fee updated successfully for Year " + data.academic_year);
         } else {
           alert("❌ Error updating fee: " + response.message);
         }
@@ -258,12 +219,12 @@
     }
 
     function logout() {
-    localStorage.removeItem("userId");
-    if ("caches" in window) {
-      caches.keys().then((names) => names.forEach((name) => caches.delete(name)));
+      localStorage.removeItem("userId");
+      if ("caches" in window) {
+        caches.keys().then(names => names.forEach(name => caches.delete(name)));
+      }
+      window.location.replace("index.html");
     }
-    window.location.replace("index.html");
-  }
   </script>
 </body>
 </html>
